--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
         <a href="index.html"><h1 class="blog-header-logo text-body-emphasis text-decoration-none">Cybersecurity Awareness Hub</h1></a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
-        <a class="btn btn-sm btn-outline-secondary" href="#">Subscribe</a>
+        <a class="btn btn-sm btn-outline-secondary" href="login.html">Login</a>
       </div>
     </div>
   </header>
 
   <div class="nav-scroller py-1 mb-3 border-bottom">
     <nav class="nav nav-underline justify-content-between">
-      <a class="nav-item nav-link link-body-emphasis active" href="https://thehackernews.com/">Latest Threats</a>
+      <a class="nav-item nav-link link-body-emphasis active" href="index.html">Latest Threats</a>
       <a class="nav-item nav-link link-body-emphasis" href="tools.html">Security Tools</a>
       <a class="nav-item nav-link link-body-emphasis" href="quiz.html">Security Quiz</a>
       <a class="nav-item nav-link link-body-emphasis" href="mission.html">Our Mission</a>
